k8s/django/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: playru
spec:
  selector:
    app: django
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
