k8s/django/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playru-ingress
  namespace: playru
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.playru.ru
    - monitor.playru.ru
    secretName: playru-tls
  rules:
  - host: api.playru.ru
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: django
            port:
              number: 8000
      - path: /nakama
        pathType: Prefix
        backend:
          service:
            name: nakama
            port:
              number: 7350
  - host: monitor.playru.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
